--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@iconify/react": "^6.0.2",
+    "@reduxjs/toolkit": "^2.9.2",
     "bootstrap-icons": "^1.13.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "countup.js": "^2.9.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-swipeable": "^7.0.2",
     "remixicon": "^4.7.0",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
