--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "clsx": "^2.1.1",
     "countup.js": "^2.9.0",
     "framer-motion": "^12.23.24",
+    "install": "^0.13.0",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
+    "npm": "^11.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -29,7 +31,8 @@
     "remixicon": "^4.7.0",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
